--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
 		"nprogress": "^0.2.0",
 		"pinia": "^2.0.22",
 		"pinia-plugin-persistedstate": "^2.2.0",
+		"socket.io-client": "2.5.0",
 		"uuid": "^9.0.0",
+		"vite-plugin-require-transform": "^1.0.4",
 		"vue": "^3.2.39",
 		"vue-router": "^4.1.5"
 	},
