--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
 		"allowJs": true,
 		"forceConsistentCasingInFileNames": true,
 		"suppressImplicitAnyIndexErrors": true,
-		"types": ["vite/client"],
+		"types": ["vite/client", "node"],
 		"paths": {
 			"~/*": ["src/*"]
 		}
