--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"@iconify-json/ri": "^1.1.3",
 		"@types/uuid": "^8.3.4",
 		"@vueuse/core": "^9.2.0",
+		"@wangeditor/editor": "^5.1.23",
+		"@wangeditor/editor-for-vue": "^5.1.12",
 		"axios": "^0.27.2",
 		"dayjs": "^1.11.5",
 		"nprogress": "^0.2.0",
