--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
 		}
 	},
 	"exclude": ["dist", "node_modules"],
-	"include": ["./src", "components.d.ts", "global.d.ts", "auto-imports.d.ts", "shims.d.ts"]
+	"include": ["./src", "global.d.ts", "./src/types/components.d.ts", "./src/types/custom-types.d.ts", "./src/types/shims.d.ts"]
 }
