--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
 	"editor.tabSize": 2,
 	"typescript.tsdk": "node_modules/typescript/lib",
 	"commentTranslate.targetLanguage": "zh-CN",
-	"commentTranslate.hover.enabled": true
+	"commentTranslate.hover.enabled": true,
+	"commentTranslate.source": "Bing"
 }
