feat:优化目录结构 使用自动导入

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compilerOptions": {
 		"baseUrl": ".",
+		"ignoreDeprecations": "5.0",
 		"module": "ESNext",
 		"target": "es2016",
 		"lib": ["DOM", "ESNext"],
