--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
 	},
 	"dependencies": {
 		"@iconify-json/ri": "^1.1.3",
+		"@types/lodash-es": "^4.17.7",
 		"@types/uuid": "^8.3.4",
 		"@vueuse/core": "^9.2.0",
 		"@wangeditor/editor": "^5.1.23",
 		"@wangeditor/editor-for-vue": "^5.1.12",
 		"axios": "^0.27.2",
 		"dayjs": "^1.11.5",
+		"lodash-es": "^4.17.21",
 		"nprogress": "^0.2.0",
 		"pinia": "^2.0.22",
 		"pinia-plugin-persistedstate": "^2.2.0",
