--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
 		}
 	},
 	"exclude": ["dist", "node_modules"],
-	"include": ["./src", "global.d.ts", "./src/types/components.d.ts", "./src/types/custom-types.d.ts", "./src/types/shims.d.ts"]
+	"include": ["./src", "global.d.ts", "./src/types/**/*.d.ts"]
 }
