--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"pinia": "^2.0.22",
 		"pinia-plugin-persistedstate": "^2.2.0",
 		"socket.io-client": "2.5.0",
+		"unocss-preset-extra": "^0.5.2",
 		"uuid": "^9.0.0",
 		"vite-plugin-require-transform": "^1.0.4",
 		"vue": "^3.2.39",
