feat:优化问题库部分功能

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
 	"typescript.tsdk": "node_modules/typescript/lib",
 	"commentTranslate.targetLanguage": "zh-CN",
 	"commentTranslate.hover.enabled": true,
-	"commentTranslate.source": "Bing"
+	"commentTranslate.source": "Bing",
+	"vue.features.codeActions.enable": false
 }
