--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "vite --port 3333 --open --mode development",
 		"typecheck": "vue-tsc --noEmit",
 		"preview": "vite preview",
-		"up": "taze major -I"
+		"up": "taze major -I",
+		"api": "npx swagger-typescript-api -p http://192.168.88.123:8081/v3/api-docs/teacherWeb -o ./src/api --axios --modular --default-as-success"
 	},
 	"dependencies": {
 		"@iconify-json/ri": "^1.1.3",
