--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"dayjs": "^1.11.7",
 		"lodash-es": "^4.17.21",
 		"nprogress": "^0.2.0",
+		"sass": "^1.62.1",
 		"socket.io-client": "2.5.0",
 		"swagger-typescript-api": "^12.0.4",
 		"unocss-preset-extra": "^0.5.2",
