--- a/package.json
+++ b/package.json
@@ -27,24 +27,24 @@
 		"uuid": "^9.0.0",
 		"vite-plugin-require-transform": "^1.0.12",
 		"vite-plugin-swagger-typescript-api": "^1.0.0",
-		"vue": "3.3.0-beta.5",
+		"vue": "3.3.1",
 		"vue-router": "^4.1.6"
 	},
 	"devDependencies": {
 		"@arco-design/web-vue": "^2.45.3",
 		"@iconify-json/carbon": "^1.1.16",
-		"@types/node": "^18.16.3",
+		"@types/node": "^18.16.7",
 		"@types/nprogress": "^0.2.0",
 		"@unocss/reset": "^0.45.30",
 		"@vitejs/plugin-vue": "^3.2.0",
 		"jsdom": "^20.0.3",
-		"pnpm": "^7.32.2",
+		"pnpm": "^7.32.4",
 		"taze": "^0.8.5",
 		"typescript": "^5.0.4",
-		"unocss": "^0.51.8",
+		"unocss": "^0.51.12",
 		"unplugin-auto-import": "^0.11.5",
 		"unplugin-vue-components": "^0.22.12",
-		"vite": "^4.3.4",
+		"vite": "^4.3.5",
 		"vue-tsc": "^0.40.13"
 	}
 }
